# Pysmophobia

./: .gitignore  README.md  ghosts.json  main.py  models_pydantic.py  pyproject.toml
One-time things/: excel_parser.py  ghost_export.py
